src/app/components/catalog/CatalogPagination/CatalogPagination.scss
.pagination {
    @include flex-container(row, center, center, nowrap);

    &__pages-numbers {
        margin-top: 40px;
        margin-bottom: 48px;
        @include flex-container(row, center, center, nowrap);
        gap: 16px;
    }

    &__page-number {
        padding: 12px;
        border: 1px solid rgba($primary-color-black, 0.2);
        border-radius: 5px;
        font-size: 18px;
        font-weight: 500;
        transition: 0.5s;
        cursor: pointer;

        &:hover {
            border: 1px solid rgba($primary-color-black, 1);
        }

        &--active {
            border: 1px solid rgba($secondary-color-blue-light, 1);
            color: $secondary-color-blue-light;
            user-select: none;

            &:hover {
                border: 1px solid rgba($secondary-color-blue-light, 1);
            }
        }

    }
}

